last try deployment

--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ CURRENCY = usd
 DB_PATH = data/prices.db
 COLLECTION_INTERVAL = 3600 # 1 hour
 ANALYZER_PORT = 8001
-ANALYZER_URL = 127.0.0.1:8001
+ANALYZER_URL = HTTP://127.0.0.1:8001
+ANALYZER_HOST = 127.0.0.1
